--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-pdftotext": "^1.3.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
