--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,18 @@
     "@reduxjs/toolkit": "^2.9.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.1.0",
     "react-pdftotext": "^1.3.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-speech-recognition": "^4.0.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
